name:          unreliable
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.8

library
  ghc-options:      -Wall
  exposed-modules:  AgentTypes
                    UnreliableGossip
                    Results
  hs-source-dirs:   lib
  build-depends:    base >= 4.7 && < 5,
                    random,
                    QuickCheck
